# rtdetr-demo

./: .gitignore  Dockerfile  Makefile  README.md  setup.cfg
.devcontainer/: devcontainer.json
.dvc/: config
data/: metrics.json
data/dataset/: annotations.dvc  images.dvc
data/models/: model.pt.dvc
retinanet_demo/: __init__.py  __main__.py  config.py  dataset.py  evaluate.py  train.py  utils.py
rtdetr_demo/: __init__.py  __main__.py  config.py  evaluate.py  train.py
