[metadata]
name = retinanet-demo
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fire
    pytorch-lightning
    torch
    torchvision

[options.extras_require]
dev =
    black
    isort
    pydocstyle
    pylint
    pytest
    pytest-cov
    jupyter

[options.entry_points]
console_scripts = 
    retinanet-demo = retinanet_demo.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import