[metadata]
name = retinanet-demo
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
packages = retinanet_demo
install_requires = 
    datumaro<1.0.0
    fire
    pyfarmhash
    pytorch-lightning
    sparrow-datums
    sparrow-cvat
    torch
    torchvision

[options.extras_require]
dev =
    black
    dvc
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov
    tensorboard

[options.entry_points]
console_scripts = 
    retinanet-demo = retinanet_demo.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import