[metadata]
name = rtdetr-demo
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fire

[options.extras_require]
dev =
    jupyter
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    rtdetr-demo = rtdetr_demo.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import